--- a/index.html
+++ b/index.html
@@ -409,10 +409,10 @@
 <div class="xr_group" style="-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0); position:relative;">
  <span class="xr_ar" style="left:1083px;top:28px;width:47px;height:60px; background-color: #000000;-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);"></span>
 </div>
- <a href="https://quadrantmusic.netlify.app/article" onclick="return(xr_nn());">
+ <a href="https://quadrantmusic.netlify.app/umculo" onclick="return(xr_nn());">
   <img class="xr_ap" src="dm-medisa-and-clothing_htm_files/224.png" alt="" title="" style="left:41px;top:29px;width:109px;height:87px;"/>
  </a>
- <a href="https://quadrantmusic.netlify.app/article" onclick="return(xr_nn());">
+ <a href="https://quadrantmusic.netlify.app/umculo" onclick="return(xr_nn());">
   <img class="xr_ap" src="dm-medisa-and-clothing_htm_files/350.jpg" alt="" title="" style="left:34px;top:8px;width:124px;height:124px;"/>
  </a>
  <img class="xr_ap" src="dm-medisa-and-clothing_htm_files/351.jpg" alt="" title="" style="left:7px;top:109px;width:35px;height:55px;"/>
@@ -425,4 +425,5 @@
 </div>
 <!--[if lt IE 7]><script src="dm-medisa-and-clothing_htm_files/png.js"></script><![endif]-->
 </body>
+
 </html>
