--- a/index.html
+++ b/index.html
@@ -264,15 +264,9 @@
 <div id="xr_page_dm-media-and-clothing_7"></div>
 <div class="xr_apb xr_pp" style="width: 1129px; height: 612px; top:0px; left:0px; background-color: white; box-shadow: 5px 5px 6px rgba(0,0,0,0.25);"></div>
 <div id="xr_xrc7" class="xr_ap xr_xrc" style="width: 1130px; height: 612px; overflow:hidden;">
-<div class="xr_group" style="-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0); position:relative;">
- <span class="xr_ar" style="left:0px;top:0px;width:1130px;height:432px; background-color: #000000;-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);"></span>
-</div>
-<div class="xr_group" style="-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0); position:relative;">
- <span class="xr_ar" style="left:460px;top:176px;width:671px;height:256px; background-color: #000000;-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);"></span>
-</div>
-<div class="xr_group" style="-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0); position:relative;">
- <span class="xr_ar" style="left:1083px;top:28px;width:47px;height:60px; background-color: #000000;-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);"></span>
-</div>
+<iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fweb.facebook.com%2Freel%2F3583662368602230%2F&show_text=true&width=267&t=0" width="267" height="591" style="border:none;overflow:hidden" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+<iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fweb.facebook.com%2Freel%2F641423868472793%2F&show_text=true&width=267&t=0" width="267" height="591" style="border:none;overflow:hidden" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+
 </div>
 </div>
 <div class="xr_app xr_page7 xr_bgn_7_0_0" id="xr_page7" style="height: 899px; left:0px;">
@@ -316,15 +310,7 @@
 <div id="xr_page_dm-media-and-clothing_10"></div>
 <div class="xr_apb xr_pp" style="width: 1129px; height: 680px; top:0px; left:0px; background-color: white; box-shadow: 5px 5px 6px rgba(0,0,0,0.25);"></div>
 <div id="xr_xrc10" class="xr_ap xr_xrc" style="width: 1130px; height: 680px; overflow:hidden;">
-<div class="xr_group" style="-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0); position:relative;">
- <span class="xr_ar" style="left:0px;top:0px;width:1130px;height:432px; background-color: #000000;-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);"></span>
-</div>
-<div class="xr_group" style="-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0); position:relative;">
- <span class="xr_ar" style="left:460px;top:176px;width:671px;height:256px; background-color: #000000;-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);"></span>
-</div>
-<div class="xr_group" style="-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0); position:relative;">
- <span class="xr_ar" style="left:1083px;top:28px;width:47px;height:60px; background-color: #000000;-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);"></span>
-</div>
+<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@directmeaningclothing1/video/7532200966494473528" data-video-id="7532200966494473528" style="max-width: 605px;min-width: 325px;" > <div> <a target="_blank" title="@directmeaningclothing1" href="https://www.tiktok.com/@directmeaningclothing1?refer=embed">@directmeaningclothing1</a> Isukile@jikijiki @Mnotho Majola @luyanda bubu @shenge_waseHlalankosi @bhambatha09 <a target="_blank" title="♬ original sound - Direct Meaning Clothing Brand" href="https://www.tiktok.com/music/original-sound-7532200982252440325?refer=embed">♬ original sound - Direct Meaning Clothing Brand</a> </div> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
 </div>
 </div>
 <div class="xr_app xr_page10 xr_bgn_10_0_0" id="xr_page10" style="height: 797px; left:0px;">
