--- a/index.html
+++ b/index.html
@@ -37,56 +37,47 @@
 </head>
 <body style="background-color:#606468">
 <!--[if gte IE 9]><!-->
-<div id="xr_xr" class="xr_noc" style="width: 1130px; height: 839px; position:relative; text-align:left; margin:0 auto;" onmousedown="xr_mm(event);">
+<div id="xr_xr" class="xr_noc" style="width: 1130px; height: 1051px; position:relative; text-align:left; margin:0 auto;" onmousedown="xr_mm(event);">
 <!--<![endif]-->
 <!--[if lt IE 9]>
-<div class="xr_ap" id="xr_xr" style="width: 1130px; height: 839px; left:50%; margin-left: -565px; text-align: left; top:0px;">
+<div class="xr_ap" id="xr_xr" style="width: 1130px; height: 1051px; left:50%; margin-left: -565px; text-align: left; top:0px;">
 <![endif]-->
  <script>var xr_xr=document.getElementById("xr_xr")</script>
 <div id="xr_td" class="xr_td">
-<div class="xr_app xr_page0 xr_bgn_0_0_0" id="xr_page0" style="height: 839px; left:0px;">
+<div class="xr_app xr_page0 xr_bgn_0_0_0" id="xr_page0" style="height: 1051px; left:0px;">
 <div id="xr_page_Direct-Meaning-DM"></div>
-<div class="xr_apb xr_pp" style="width: 1129px; height: 839px; top:0px; left:0px; background-color: white; box-shadow: 5px 5px 6px rgba(0,0,0,0.25);"></div>
-<div id="xr_xrc1" class="xr_ap xr_xrc" style="width: 1130px; height: 839px; overflow:hidden;">
- <img class="xr_ap" src="Direct-Meaning-DM_htm_files/98.jpg" alt="" title="" style="left:9px;top:4px;width:1012px;height:439px;">
+<div class="xr_apb xr_pp" style="width: 1129px; height: 1051px; top:0px; left:0px; background-color: white; box-shadow: 5px 5px 6px rgba(0,0,0,0.25);"></div>
+<div id="xr_xrc1" class="xr_ap xr_xrc" style="width: 1130px; height: 1051px; overflow:hidden;">
+ <img class="xr_ap" src="Direct-Meaning-DM_htm_files/300.jpg" alt="" title="" style="left:9px;top:4px;width:1012px;height:438px;">
 <div class="xr_group" style="-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0); position:relative;">
  <span class="xr_ar" style="left:0px;top:0px;width:1020px;height:432px; background-color: #000000;-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);"></span>
 </div>
- <img class="xr_ap" src="Direct-Meaning-DM_htm_files/99.jpg" alt="" title="" style="left:468px;top:180px;width:553px;height:264px;">
+ <img class="xr_ap" src="Direct-Meaning-DM_htm_files/301.jpg" alt="" title="" style="left:468px;top:180px;width:553px;height:263px;">
 <div class="xr_group" style="-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0); position:relative;">
  <span class="xr_ar" style="left:460px;top:176px;width:561px;height:256px; background-color: #000000;-moz-opacity: 0.00;-khtml-opacity: 0.00;opacity: 0.00;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);"></span>
 </div>
- <img class="xr_ap" src="Direct-Meaning-DM_htm_files/100.jpg" alt="" title="" style="left:0px;top:-1px;width:1017px;height:833px;">
- <img class="xr_ap" src="Direct-Meaning-DM_htm_files/101.jpg" alt="" title="" style="left:3px;top:-1px;width:1018px;height:833px;">
- <img class="xr_ap" src="Direct-Meaning-DM_htm_files/102.jpg" alt="" title="" style="left:11px;top:26px;width:1017px;height:813px;">
- <img class="xr_ap" src="Direct-Meaning-DM_htm_files/250.jpg" alt="" title="" style="left:13px;top:372px;width:873px;height:461px;">
+ <img class="xr_ap" src="Direct-Meaning-DM_htm_files/302.jpg" alt="" title="" style="left:0px;top:-1px;width:1017px;height:1028px;">
+ <img class="xr_ap" src="Direct-Meaning-DM_htm_files/303.jpg" alt="" title="" style="left:3px;top:-1px;width:1018px;height:1053px;">
+ <img class="xr_ap" src="Direct-Meaning-DM_htm_files/304.jpg" alt="" title="" style="left:11px;top:26px;width:1006px;height:1009px;">
+ <img class="xr_ap" src="Direct-Meaning-DM_htm_files/305.jpg" alt="" title="" style="left:15px;top:381px;width:878px;height:661px;">
  <img class="xr_ap" src="Direct-Meaning-DM_htm_files/104.jpg" alt="" title="" style="left:835px;top:438px;width:76px;height:333px;">
- <img class="xr_ap" src="Direct-Meaning-DM_htm_files/287.jpg" alt="" title="" style="left:0px;top:11px;width:987px;height:338px;">
- <img class="xr_ap" src="Direct-Meaning-DM_htm_files/253.jpg" alt="" title="" style="left:0px;top:325px;width:802px;height:45px;">
- <img class="xr_ap" src="Direct-Meaning-DM_htm_files/107.jpg" alt="" title="" style="left:971px;top:94px;width:38px;height:171px;">
- <img class="xr_ap" src="Direct-Meaning-DM_htm_files/108.jpg" alt="" title="" style="left:926px;top:434px;width:80px;height:334px;">
- <img class="xr_ap" src="Direct-Meaning-DM_htm_files/256.jpg" alt="" title="" style="left:780px;top:77px;width:282px;height:262px;">
+ <img class="xr_ap" src="Direct-Meaning-DM_htm_files/307.jpg" alt="" title="" style="left:8px;top:11px;width:979px;height:338px;">
+ <img class="xr_ap" src="Direct-Meaning-DM_htm_files/308.jpg" alt="" title="" style="left:0px;top:324px;width:802px;height:45px;">
+ <img class="xr_ap" src="Direct-Meaning-DM_htm_files/309.jpg" alt="" title="" style="left:971px;top:94px;width:38px;height:171px;">
+ <img class="xr_ap" src="Direct-Meaning-DM_htm_files/310.jpg" alt="" title="" style="left:926px;top:434px;width:80px;height:333px;">
+ <img class="xr_ap" src="Direct-Meaning-DM_htm_files/311.jpg" alt="" title="" style="left:780px;top:77px;width:282px;height:262px;">
+ <img class="xr_ap" src="Direct-Meaning-DM_htm_files/312.jpg" alt="" title="" style="left:1028px;top:4px;width:94px;height:1026px;">
+ <img class="xr_ap" src="Direct-Meaning-DM_htm_files/315.jpg" alt="" title="" style="left:37px;top:395px;width:780px;height:590px;">
+ <img class="xr_ap" src="Direct-Meaning-DM_htm_files/316.png" alt="" title="" style="left:878px;top:929px;width:130px;height:72px;">
  <a href="https://dm-media-and-clothing.netlify.app/" onclick="return(xr_nn());">
-  <img class="xr_ap" src="Direct-Meaning-DM_htm_files/257.jpg" alt="" title="" style="left:506px;top:731px;width:152px;height:71px;">
+  <img class="xr_ap" src="Direct-Meaning-DM_htm_files/317.png" alt="" title="" style="left:878px;top:929px;width:130px;height:72px;">
  </a>
- <a href="https://dm-media-and-clothing.netlify.app/" onclick="return(xr_nn());">
-  <img class="xr_ap" src="Direct-Meaning-DM_htm_files/258.jpg" alt="" title="" style="left:510px;top:740px;width:141px;height:54px;">
- </a>
- <img class="xr_ap" src="Direct-Meaning-DM_htm_files/259.jpg" alt="" title="" style="left:461px;top:779px;width:26px;height:41px;">
- <!--[if IE]>
- <a href="https://dm-media-and-clothing.netlify.app/" onclick="return(xr_nn());">
-  <img class="xr_ap" src="Direct-Meaning-DM_htm_files/260.png" alt="CLICK" title="" style="left:548px;top:576px;width:587px;height:199px;">
- </a>
- <![endif]-->
- <!--[if !IE]>-->
- <div class="xr_txt Normal_text_a xr_s0" style="position: absolute; left:548px; top:775px; width:60px; height:10px; text-shadow: 519px -177px 6px rgba(0,0,0,0.25);">
-  <span class="xr_tl Normal_text_a xr_s0" style="top: -18.06px;"><a href="https://dm-media-and-clothing.netlify.app/" onclick="">CLICK</a></span>
+ <img class="xr_ap" src="Direct-Meaning-DM_htm_files/336.jpg" alt="" title="" style="left:887px;top:936px;width:114px;height:59px;">
+ <div class="xr_txt Normal_text xr_s0" style="position: absolute; left:897px; top:977px; width:91px; height:10px;">
+  <span class="xr_tl Normal_text xr_s0" style="top: -28.36px;"><a href="https://dm-media-and-clothing.netlify.app/" onclick="">CLICK</a></span>
  </div>
- <!--<![endif]-->
- <img class="xr_ap" src="Direct-Meaning-DM_htm_files/113.png" alt="" title="" style="left:34px;top:400px;width:773px;height:382px;">
- <img class="xr_ap" src="Direct-Meaning-DM_htm_files/114.jpg" alt="" title="" style="left:1028px;top:4px;width:94px;height:824px;">
- <img class="xr_ap" src="Direct-Meaning-DM_htm_files/298.jpg" alt="" title="" style="left:405px;top:151px;width:30px;height:43px;">
- <img class="xr_ap" src="Direct-Meaning-DM_htm_files/299.jpg" alt="" title="" style="left:27px;top:38px;width:899px;height:257px;">
+ <img class="xr_ap" src="Direct-Meaning-DM_htm_files/337.jpg" alt="" title="" style="left:827px;top:985px;width:38px;height:59px;">
+ <img class="xr_ap" src="Direct-Meaning-DM_htm_files/338.jpg" alt="" title="" style="left:41px;top:40px;width:908px;height:260px;">
 </div>
 </div>
 <div class="xr_app xr_page1 xr_bgn_1_0_0" id="xr_page1" style="height: 896px; left:0px;">
